<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Body Fat Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="input1">Age</string>
    <string name="input2">Weight</string>
    <string name="input3">Height</string>
    <string name="input4">Neck Circumference </string>
    <string name="input1Unit">years</string>
     
    

</resources>
